# peyeeye-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
peyeeye/: __init__.py  client.py  errors.py  langchain.py  litellm.py  models.py
tests/: conftest.py  test_client_init.py  test_entities.py  test_errors_and_retries.py  test_langchain.py  test_litellm.py  test_redact_rehydrate.py  test_sessions.py  test_shield.py  test_streaming.py
