[project]
name = "peyeeye"
version = "1.0.1"
description = "Official Python client for peyeeye.ai — PII redaction & rehydration for LLM prompts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "peyeeye.ai", email = "support@peyeeye.ai" },
]
keywords = [
    "pii",
    "pii-detection",
    "pii-redaction",
    "pii-redaction-python",
    "pii-redaction-sdk",
    "pii-masking",
    "pii-masking-sdk",
    "pii-scrubber",
    "pii-redactor",
    "redaction",
    "rehydrate",
    "rehydrate-llm-responses",
    "llm",
    "llm-pii",
    "llm-pii-redaction",
    "llm-data-privacy",
    "llm-privacy",
    "prompt-privacy",
    "prompt-redaction",
    "redact-pii-before-openai",
    "redact-pii-before-llm",
    "ai",
    "ai-privacy",
    "ai-safety",
    "openai",
    "openai-pii-redaction",
    "anthropic",
    "anthropic-pii-redaction",
    "claude",
    "claude-pii-redaction",
    "chatgpt",
    "chatgpt-pii",
    "gpt",
    "gpt-4",
    "gemini",
    "rag",
    "prompt-engineering",
    "privacy",
    "data-privacy",
    "data-masking",
    "data-protection",
    "anonymization",
    "tokenization",
    "sensitive-data",
    "gdpr",
    "hipaa",
    "ccpa",
    "phi",
    "phi-redaction",
    "compliance",
    "presidio",
    "presidio-alternative",
    "microsoft-presidio-alternative",
    "scrubadub",
    "scrubadub-alternative",
    "piiranha",
    "aws-comprehend-pii",
    "google-dlp",
    "security",
    "peyeeye",
]
dependencies = [
    "httpx>=0.27",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://peyeeye.ai"
Documentation = "https://peyeeye.ai/docs"
Repository = "https://github.com/peyeeye/peyeeye-python"
Issues = "https://github.com/peyeeye/peyeeye-python/issues"
Source = "https://github.com/peyeeye/peyeeye-python"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["peyeeye"]

[tool.hatch.build.targets.sdist]
include = [
    "peyeeye",
    "README.md",
    "pyproject.toml",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
